--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="cricketer-1">
                     <div class="rohit">
                         <div class="rohit-2">
-                        <img src="./cricketers/rohit.webp" class="image">
+                        <img src="./cricketers/rohit.webp" class="image" id="hitman">
                         </div>
                             <div class="rohit-1">
                             <h2 class="head-R">Rohit Sharma</h2>
